<resources>
    <string name="app_name">ToDo Project</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="password_confirm">Подтвердить пароль</string>
    <string name="enter">Вход</string>
    <string name="enter_with_gmail">Вход через gmail</string>
    <string name="registration">Регистрация</string>
    <string name="registration_user">Зарегистрироваться</string>
    <string name="logo">Логотип</string>
    <string name="profile">Профиль</string>
    <string name="add_group">Создать группу</string>
    <string name="logout">Выход</string>
    <string name="delete_account">Удалить аккаунт</string>
    <string name="open_navigation_menu">Открыть меню навигации</string>
    <string name="group_list">Список групп</string>
    <string name="change_photo">Изменить фото</string>
    <string name="change_password">Изменить пароль</string>
    <string name="change_priority">Изменить приоритет</string>
    <string name="change_alarm">Изменить будильник</string>
    <string name="change_notification">Изменить время уведомления</string>
    <string name="complete">Выполнить</string>
    <!-- P1, P2, P3 -->
    <string name="priority_task_text">P%1$d</string>
</resources>