<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@drawable/bg_rounded_dark_gray">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/complete"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_outlined"
        android:contentDescription="@string/complete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        style="@style/main_info_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:lines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/complete"
        app:layout_constraintTop_toTopOf="@id/complete"
        tools:text="@tools:sample/lorem/random" />

    <TextView
        android:id="@+id/description"
        style="@style/secondary_info_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:lines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/title"
        app:layout_constraintTop_toBottomOf="@id/title"
        tools:text="@tools:sample/lorem/random" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/notification_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@null"
        android:contentDescription="@string/change_notification"
        android:src="@drawable/ic_clock"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/complete"
        app:layout_constraintTop_toBottomOf="@id/complete" />

    <TextView
        android:id="@+id/notification_time"
        style="@style/secondary_info_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/notification_picker"
        app:layout_constraintStart_toEndOf="@id/notification_picker"
        app:layout_constraintTop_toTopOf="@id/notification_picker"
        tools:text="12:00 25.05.2077" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/priority_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@null"
        android:contentDescription="@string/change_priority"
        android:src="@drawable/ic_flag"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/alarm_picker" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/alarm_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@null"
        android:contentDescription="@string/change_alarm"
        android:src="@drawable/ic_alarm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>